--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
     </section>
 
- 
+         jackson
 
     <section id="contact" class="contact">
         <h2 class="section-title">Get In Touch</h2>
