--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <section id="contact" class="contact">
         <h2 class="section-title">Get In Touch</h2>
         <div class="social-grid">
-            <a href="#" class="social-card"><i class="fa-brands fa-github"></i> GitHub</a>
+            <a href="#" class="social-card"><i class="fa-brands fa-github"></i> GitHub : Prodev-X-team </a>
             <a href="#" class="social-card"><i class="fa-brands fa-telegram"></i> Telegram id : @aqball007</a>
             <a href="mailto:mohammadaqballhakimi@gmail.com" class="social-card"><i class="fa-solid fa-envelope"></i> mohammadaqballhakimi@gmail.com</a>
         </div>
